--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.24.0",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
+    "react-d3-speedometer": "^0.14.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
