--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "firebase": "^7.24.0",
     "material-table": "^1.69.1",
